<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.Activities.AddClassActivity.AddClassActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@id/textFieldEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp">

                <ImageView
                    android:id="@+id/ProfilePhoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_menu_camera"
                    android:contentDescription="@string/Add_Profile" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/class_name"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewImage"
        app:startIconDrawable="@drawable/ic_class"
        tools:layout_editor_absoluteY="163dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_className"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@id/et_password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldClassTime"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/class_time"
        app:endIconMode="clear_text"
        app:helperText="12.30 PM - 1.30PM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFieldEmail"
        app:startIconDrawable="@drawable/ic_baseline_access_time_24"
        tools:layout_editor_absoluteY="163dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_classTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@id/CreateClass"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/CreateClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldClassTime"
        android:layout_marginTop="20dp"
        android:text="@string/create_class" />

    <ProgressBar
        android:id="@+id/Progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>